--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -21,10 +21,10 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li> <a href="membresias/registrar_membresias">Registrar membresias</a  ></li>
-      <li> <a href="membresias/listar_usuario_membresias">Listar membresias (user)</a  ></li>
+      <li> <a href="membresias/registrar_membresias">Registrar membresias</a></li>
+      <li> <a href="membresias/listar_usuario_membresias">Listar membresias (user)</a></li>
       <li><a href="membresias/buscar_membresias">Buscar membresias</a></li>
-      <li> <a href="membresias/listar_admin_membresias">Listar membresias (Admin)</a  ></li>
+      <li> <a href="membresias/listar_admin_membresias">Listar membresias (Admin)</a></li>
     </ul>
     <input type="checkbox" class="menu-toggle" id="menu3" />
     <label for="menu3" class="menu">
@@ -34,7 +34,7 @@
     </label>
     <ul class="sub-menu">
       <li><a href="vehiculos/registrar_vehiculos">Registrar vehiculos</a></li>
-      <li> <a href="vehiculos/listar_admin_vehiculos">Listar vehiculos(admin)</a  ></li>
+      <li> <a href="vehiculos/listar_admin_vehiculos">Listar vehiculos(admin)</a></li>
       <li><a href="vehiculos/buscar_vehiculos">Buscar vehiculos</a></li>
     </ul>
     <input type="checkbox" class="menu-toggle" id="menu4" />
@@ -91,9 +91,10 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li> <a href="horarios_estacionamiento/registrar_horarios_estacionamiento">Registrar hrs.Estacionamiento</a  ></li>
-      <li> <a href="horarios_estacionamiento/buscar_horarios_estacionamiento">Buscar hrs.Estacionamiento</a  ></li>
-      <li> <a href="horarios_estacionamiento/listar_admin_horarios_estacionamiento">Listar hrs.Estacionamiento (admin)</a  ></li>
+      <li> <a href="horarios_estacionamiento/registrar_horarios_estacionamiento">Registrar hrs.Estacionamiento</a></li>
+      <li> <a href="horarios_estacionamiento/buscar_horarios_estacionamiento">Buscar hrs.Estacionamiento</a></li>
+      <li> <a href="horarios_estacionamiento/listar_admin_horarios_estacionamiento">Listar hrs.Estacionamiento
+          (admin)</a></li>
     </ul>
 
     <input type="checkbox" class="menu-toggle" id="menu9" />
@@ -103,8 +104,8 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li> <a href="comentarios/registrar_comentarios">Registrar comentarios</a  ></li>
-      <li> <a href="comentarios/listar_comentarios_admin">Listar comentarios (admin)</a  ></li>
+      <li> <a href="comentarios/registrar_comentarios">Registrar comentarios</a></li>
+      <li> <a href="comentarios/listar_comentarios_admin">Listar comentarios (admin)</a></li>
       <li><a href="comentarios/buscar_comentarios">Buscar comentarios</a></li>
     </ul>
 
@@ -127,10 +128,10 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li> <a href="localizaciones/registrar_localizaciones">Registrar localizaciones</a  ></li>
-      <li> <a href="localizaciones/listar_usuario_localizaciones">Listar localizaciones (user)</a  ></li>
-      <li> <a href="localizaciones/buscar_localizaciones">Buscar localizaciones</a  ></li>
-      <li> <a href="localizaciones/listar_admin_localizaciones">Listar localizaciones (admin)</a  ></li>
+      <li> <a href="localizaciones/registrar_localizaciones">Registrar localizaciones</a></li>
+      <li> <a href="localizaciones/listar_usuario_localizaciones">Listar localizaciones (user)</a></li>
+      <li> <a href="localizaciones/buscar_localizaciones">Buscar localizaciones</a></li>
+      <li> <a href="localizaciones/listar_admin_localizaciones">Listar localizaciones (admin)</a></li>
     </ul>
 
     <input type="checkbox" class="menu-toggle" id="menu12" />
@@ -140,9 +141,9 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li> <a href="estacionamiento/registrar_estacionamientos">Registrar estacionamientos</a  ></li>
-      <li> <a href="estacionamiento/listar_admin_estacionamientos">Listar estacionamientos (admin)</a  ></li>
-      <li> <a href="estacionamiento/buscar-estacionamiento">Buscar estacionamiento</a  ></li>
+      <li> <a href="estacionamiento/registrar_estacionamientos">Registrar estacionamientos</a></li>
+      <li> <a href="estacionamiento/listar_admin_estacionamientos">Listar estacionamientos (admin)</a></li>
+      <li> <a href="estacionamiento/buscar-estacionamiento">Buscar estacionamiento</a></li>
     </ul>
     <input type="checkbox" class="menu-toggle" id="menu13" />
     <label for="menu13" class="menu">
@@ -152,9 +153,9 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li> <a href="reservaestacionamiento/registrar_reservas_estacionamientos">Registrar reservas</a  ></li>
-      <li> <a href="reservaestacionamiento/listar_admin_reserva_estacionamientos">Listar reservas (admin)</a  ></li>
-      <li> <a href="reservaestacionamiento/buscar-reserva-estacionamiento">Buscar reservas</a  ></li>
+      <li> <a href="reservaestacionamiento/registrar_reservas_estacionamientos">Registrar reservas</a></li>
+      <li> <a href="reservaestacionamiento/listar_admin_reserva_estacionamientos">Listar reservas (admin)</a></li>
+      <li> <a href="reservaestacionamiento/buscar-reserva-estacionamiento">Buscar reservas</a></li>
     </ul>
 
     <input type="checkbox" class="menu-toggle" id="menu14" />
@@ -164,12 +165,40 @@
       <mat-icon class="icon-up">arrow_drop_up</mat-icon>
     </label>
     <ul class="sub-menu">
-      <li><a href="reportes/cant-incidentes-por-rol">Cantidad de incidentes por rol</a  ></li>
-      <li> <a href="reportes/cant-reservas-por-fecha">Cantidad de reservas por fecha</a  ></li>
-      <li> <a href="reportes/cant-reservas-por-tipoPago">Cantidad de reservas por tipo de pago</a  ></li>
-      <li> <a href="reportes/cant-reservas-por-usuario">Cantidad de reservas por usuario</a  ></li>
+      <li><a href="reportes/cant-incidentes-por-rol">Cantidad de incidentes por rol</a></li>
+      <li> <a href="reportes/cant-reservas-por-fecha">Cantidad de reservas por fecha</a></li>
+      <li> <a href="reportes/cant-reservas-por-tipoPago">Cantidad de reservas por tipo de pago</a></li>
+      <li> <a href="reportes/cant-reservas-por-usuario">Cantidad de reservas por usuario</a></li>
     </ul>
   </div>
+
+  <script>
+    // Encapsula el código JavaScript en una función
+    function makeResizable() {
+      const sidenav = document.getElementById('mySidenav');
+      let isResizing = false;
+      let initialWidth = 250;
+
+      sidenav.addEventListener('mousedown', (e) => {
+        if (e.offsetX > sidenav.offsetWidth - 10) {
+          isResizing = true;
+          initialWidth = sidenav.offsetWidth;
+        }
+      });
+
+      document.addEventListener('mousemove', (e) => {
+        if (!isResizing) return;
+        sidenav.style.width = `${initialWidth + e.clientX}px`;
+      });
+
+      document.addEventListener('mouseup', () => {
+        isResizing = false;
+      });
+    }
+
+    // Llama a la función cuando el DOM esté completamente cargado
+    document.addEventListener('DOMContentLoaded', makeResizable);
+  </script>
 </body>
 
 </html>
