--- a/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.css
@@ -1,9 +1,7 @@
 /*Estilos del form*/
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(to right, #11998e, #38ef7d);   
-  height: 760px;
-}
+  background: linear-gradient(to right, #11998e, #38ef7d); }
 
 table {
   background-color: rgb(255, 255, 255);
