--- a/SAFE_PARKING_FRONT/src/app/components/comentario/buscar-comentarios/buscar-comentarios.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/buscar-comentarios/buscar-comentarios.component.css
@@ -65,7 +65,7 @@ body {
     .info-box h1 {
       font-size: 1.2em;
       font-weight: bold;
-      color: #30e298;
+      color: #11998e;
       margin-bottom: 2px;
     }
 
