--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/buscar-estacionamiento/buscar-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/buscar-estacionamiento/buscar-estacionamiento.component.css
@@ -66,7 +66,7 @@ body{
 .generic-box h1 {
     font-size: 1.2em;
     font-weight: bold;
-    color: #30e298;
+    color: #11998e;
     margin-bottom: 2px;
 }
 
