--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
@@ -2,89 +2,75 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <h2 style="text-align: center">LISTA DE HORARIOS</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
 
-    <div class="example-container mat-elevation-z8">
-      <mat-form-field>
-        <input
-          style="text-align: left"
-          matInput
-          (keyup)="filter($event)"
-          placeholder="Bucar por.."
-        />
-      </mat-form-field>
-      <br />
+<body>
+  <h2 style="text-align: center">LISTA DE HORARIOS</h2>
 
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- ID -->
-        <ng-container matColumnDef="idHorario">
-          <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let element">{{ element.idHorario }}</td>
-        </ng-container>
+  <div class="example-container mat-elevation-z8">
+    <mat-form-field>
+      <input style="text-align: left" matInput (keyup)="filter($event)" placeholder="Bucar por.." />
+    </mat-form-field>
+    <br />
 
-        <!-- fecha -->
-        <ng-container matColumnDef="fecha">
-          <th mat-header-cell *matHeaderCellDef>fecha</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.fecha }}
-          </td>
-        </ng-container>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!-- ID -->
+      <ng-container matColumnDef="idHorario">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.idHorario }}</td>
+      </ng-container>
 
-        <!-- hora apertura -->
-        <ng-container matColumnDef="horaApertura">
-          <th mat-header-cell *matHeaderCellDef>Hora de apertura</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.horaApertura }}
-          </td>
-        </ng-container>
+      <!-- fecha -->
+      <ng-container matColumnDef="fecha">
+        <th mat-header-cell *matHeaderCellDef>fecha</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.fecha }}
+        </td>
+      </ng-container>
 
-        <!-- hora cierre -->
-        <ng-container matColumnDef="horaCierre">
-          <th mat-header-cell *matHeaderCellDef>Hora de cierre</th>
-          <td mat-cell *matCellDef="let element">{{ element.horaCierre }}</td>
-        </ng-container>
+      <!-- hora apertura -->
+      <ng-container matColumnDef="horaApertura">
+        <th mat-header-cell *matHeaderCellDef>Hora de apertura</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.horaApertura }}
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="accion01">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="primary"
-              [routerLink]="['ediciones', element.idHorario]"
-            >
-              <mat-icon>edit</mat-icon> Editar
-            </button>
-          </td>
-        </ng-container>
+      <!-- hora cierre -->
+      <ng-container matColumnDef="horaCierre">
+        <th mat-header-cell *matHeaderCellDef>Hora de cierre</th>
+        <td mat-cell *matCellDef="let element">{{ element.horaCierre }}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="accion02">
-          <th mat-header-cell *matHeaderCellDef>Acciones</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              color="warn"
-              (click)="eliminar(element.idHorario)"
-            >
-              <mat-icon>delete</mat-icon> Eliminar
-            </button>
-          </td>
-        </ng-container>
+      <ng-container matColumnDef="accion01">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idHorario]">
+            <mat-icon>edit</mat-icon> Editar
+          </button>
+        </td>
+      </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-      <br />
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 15]"
-        showFirstLastButtons
-      ></mat-paginator>
-    </div>
-  </body>
+      <ng-container matColumnDef="accion02">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button color="warn" (click)="eliminar(element.idHorario)">
+            <mat-icon>delete</mat-icon> Eliminar
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <br />
+    <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
+  </div>
+</body>
+
 </html>
