--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
@@ -45,7 +45,7 @@ input {
 button {
   width: 100%;
   height: 40px;
-  background-color: #4ff5cb;
+  background-color: #11998e;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -60,9 +60,11 @@ button:hover {
 
 /* Mapa */
 .map-container {
-  width: 100%;
+  width: 500px;
   height: 400px;
-  border: 1px solid #ccc;
   border-radius: 5px;
-  margin-top: 20px;
+  margin: 40px auto; /* Centrar horizontalmente */
+  flex-direction: column;
+  justify-content: center; /* Centrar verticalmente */
+  align-items: center; /* Centrar horizontalmente */
 }
