--- a/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
@@ -1,81 +1,65 @@
-<div [hidden]="route.children.length !== 0">
-  <app-navbar></app-navbar>
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
-    </head>
+<app-navbar></app-navbar>
+<!DOCTYPE html>
+<html lang="en">
 
-    <body>
-      <div class="litle">
-        <h2 style="text-align: center">LISTA DE ROLES</h2>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
 
-      <div class="container">
-        <mat-form-field>
-          <input
-            style="text-align: left"
-            matInput
-            (keyup)="filter($event)"
-            placeholder="buscar"
-          />
-        </mat-form-field>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <ng-container matColumnDef="idRol">
-            <th mat-header-cell *matHeaderCellDef>Id</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.idRol }}
-            </td>
-          </ng-container>
+<body>
+  <div class="litle">
+    <h2 style="text-align: center">LISTA DE ROLES</h2>
+  </div>
 
-          <ng-container matColumnDef="nombreRol">
-            <th mat-header-cell *matHeaderCellDef>Rol</th>
-            <td mat-cell *matCellDef="let element">{{ element.nombreRol }}</td>
-          </ng-container>
+  <div class="container">
+    <mat-form-field>
+      <input style="text-align: left" matInput (keyup)="filter($event)" placeholder="buscar" />
+    </mat-form-field>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="idRol">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idRol }}
+        </td>
+      </ng-container>
 
-          <ng-container matColumnDef="usuario">
-            <th mat-header-cell *matHeaderCellDef>Usuario</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.usuario.nombre }}
-            </td>
-          </ng-container>
+      <ng-container matColumnDef="nombreRol">
+        <th mat-header-cell *matHeaderCellDef>Rol</th>
+        <td mat-cell *matCellDef="let element">{{ element.nombreRol }}</td>
+      </ng-container>
 
-          <ng-container matColumnDef="accion01">
-            <th mat-header-cell *matHeaderCellDef>Modificar</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="primary"
-                [routerLink]="['ediciones', element.idRol]"
-              >
-                <mat-icon>edit</mat-icon> Editar
-              </button>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="accion02">
-            <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="warn"
-                (click)="eliminar(element.idRol)"
-              >
-                <mat-icon>delete</mat-icon> Eliminar
-              </button>
-            </td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-        <br />
-        <mat-paginator
-          [pageSizeOptions]="[5, 10, 25]"
-          showFirstLastButtons
-        ></mat-paginator>
-      </div>
-    </body>
-  </html>
-</div>
+      <ng-container matColumnDef="usuario">
+        <th mat-header-cell *matHeaderCellDef>Usuario</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.usuario.nombre }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="accion01">
+        <th mat-header-cell *matHeaderCellDef>Modificar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idRol]">
+            <mat-icon>edit</mat-icon> Editar
+          </button>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="accion02">
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button color="warn" (click)="eliminar(element.idRol)">
+            <mat-icon>delete</mat-icon> Eliminar
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <br />
+    <mat-paginator [pageSizeOptions]="[5, 10, 25]" showFirstLastButtons></mat-paginator>
+  </div>
+</body>
+
+</html>
