--- a/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.css
@@ -20,6 +20,8 @@
   background-color: #1f1f1f;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  overflow: auto
+
 }
 
 .sidenav label:hover {
