Correccion Lista de localizaciones (USER)

--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/localizaciones.component.html
@@ -1,2 +1,4 @@
-<div [hidden]="route.children.length !== 0"></div>
+<div [hidden]="route.children.length !== 0">
+    <app-navbar></app-navbar>
+</div>
 <router-outlet></router-outlet>
