--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
@@ -1,5 +1,4 @@
 <router-outlet></router-outlet>
-<app-navbar></app-navbar>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -184,7 +183,9 @@
             </div>
           </div>
           <div class="botones">
-            <button class = "botonRegistro" mat-raised-button color="primary">Registrar</button>
+            <button class="botonRegistro" mat-raised-button color="primary">
+              Registrar
+            </button>
             <p>{{ mensaje }}</p>
           </div>
         </form>
