--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -173,7 +172,8 @@
         </div>
         <div class="btn-container">
           <button mat-raised-button color="primary">Registrar</button>
-        </div>      </form>
+        </div>
+      </form>
     </div>
   </body>
 </html>
