--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -119,7 +118,8 @@
         <div id="map" style="height: 400px"></div>
         <div class="btn-container">
           <button mat-raised-button color="primary">Registrar</button>
-        </div>      </form>
+        </div>
+      </form>
     </div>
   </body>
 </html>
