--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
@@ -4,19 +4,15 @@ body {
               url('https://img.freepik.com/fotos-premium/central-park-hermoso-contraste-rascacielos-edificios-manhattan-nueva-york-ee-uu_71337-684.jpg?w=360');
   background-size: cover;
   color: #080808;
+  height: 300%;
 }
-#container{
-  background-color: #080808;
-  width: 100%;
 
-}
 /* Styles for the individual card */
 .card {
   width: 300px; /* Set the width as per your design */
   margin: 15px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  box-shadow: 0 4px 8px 0 rgba(243, 239, 239, 0.2);
   transition: box-shadow 0.3s;
 }
 
@@ -24,7 +20,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: rgb(156, 156, 156);
 }
 
 .card:hover {
@@ -83,7 +78,7 @@ body {
 #map {
   /* Add styles for the map container */
   height: 200px; /* Set the height as needed */
-  border: 1px solid #ccc;
+  border: 1px solid #131212;
   margin-top: 10px;
   border-radius: 8px;
   width: 90%;
