--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,10 +24,7 @@
             <p>Latitud: {{ element.latitud }}</p>
             <p>Longitud: {{ element.longitud }}</p>
           </div>
-          <div
-            id="map_{{ element.idLocalizacion }}"
-            style="height: 200px"
-          ></div>
+          <div id="map{{ element.idLocalizacion }}" style="height: 200px"></div>
           <div class="card-footer">
             <button
               mat-icon-button
