--- a/SAFE_PARKING_FRONT/src/app/components/navbar/navbar.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar/navbar.component.html
@@ -12,18 +12,9 @@
         <img class="logo" src="/assets/image/Logo_verde.png" alt="logo" />
         <span>Safe Parking</span>
         <div class="spacer"></div>
-        <button mat-button routerLink="/navbar/home">Home</button>
-        <button mat-button routerLink="/navbar/home-arrendador">
-          Portal Arrendador
-        </button>
-        <button mat-button routerLink="/navbar/home-condutor">
-          Portal Conductor
-        </button>
-        <button mat-button routerLink="/navbar/home_administrador">
-          Portal Administrador
-        </button>
-        <button mat-button routerLink="/sign-in">Sign In</button>
-        <button mat-button routerLink="/sign-up" class="boton-verde-esmeralda">
+        <button mat-button routerLink="/home">Home</button>
+        <button mat-button routerLink="/login">Sign In</button>
+        <button mat-button routerLink="/SigUp" class="boton-verde-esmeralda">
           Sign Up
         </button>
       </mat-toolbar>
