--- a/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/sign-in/sign-in.component.css
@@ -1,39 +1,57 @@
+body {
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to right, #11998e, #38ef7d);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  /*Contenido principal*/
-  
-  
-  
-  .contenido-principal {
-      margin: 0;
-      text-align: center;
-      margin: 20px;
-  }
-  
-  .container {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  img {
-      max-width: 300px;
-      height: auto;
-  }
-  
-  .intro {
-      text-align: center;
-  }
-  
-  .features {
-      margin: 20px 0;
-  }
-  
-  .feature {
-      text-align: center;
-      margin: 20px;
-      padding: 20px;
-      border: 1px solid #ddd;
-      background-color: #f9f9f9;
-  }
+.container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+}
+
+img {
+  max-width: 100px;
+  height: auto;
+}
+
+h2 {
+  color: #333;
+}
+
+.example-full-width {
+  width: 100%;
+  height: 100px;
+}
+
+input {
+  padding: 10px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.botoncito {
+  padding: 10px 20px;
+  background-color: #080808;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+background-color: aquamarine;
+color: #080808;
+}
