--- a/SAFE_PARKING_FRONT/src/app/components/sign-up/sign-up.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/sign-up/sign-up.component.html
@@ -1,35 +1,36 @@
-<app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<div [hidden]="route.children.length !== 0">
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-<link rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-  <title>Document</title>
-</head>
-<body>
-  
-  <div>
-  <form (ngSubmit)="onSubmit()">
-    <label for="username">Nombre de Usuario:</label>
-    <input type="text" id="username" [(ngModel)]="username" required />
-  
-    <label for="password">Contraseña:</label>
-    <input type="password" id="password" [(ngModel)]="password" required />
-  
-    <button type="submit">Iniciar Sesión</button>
-  </form>
-
-  </div>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <app-navbar></app-navbar>
+      <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+        <mat-tab label="MIRA TU MEMBRESIA"
+          ><app-listar-usuario-membresia></app-listar-usuario-membresia
+        ></mat-tab>
+        <mat-tab label="REGISTRATE"
+          ><app-creaedita-usuario></app-creaedita-usuario
+        ></mat-tab>
+        <mat-tab label="SELECCIONA TU ROL"
+          ><app-creaedita-rol></app-creaedita-rol
+        ></mat-tab>
+      </mat-tab-group>
+    </div>
+  </body>
 </html>
-
-</div>
-<app-footer></app-footer>
