mejora en el diseño de cada entidad para el navegador

--- a/SAFE_PARKING_FRONT/src/app/components/comentario/buscar-comentarios/buscar-comentarios.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/buscar-comentarios/buscar-comentarios.component.css
@@ -1,6 +1,9 @@
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #11998e, #38ef7d);
+    padding: 30px;
+    margin-left: 250px;
+
   }
 
   .search-form {
