--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
@@ -5,6 +5,8 @@ body {
   background-size: cover;
   color: #080808;
   height: 300%;
+  margin-left: 250px;
+
 }
 
 /* Styles for the individual card */
