--- a/SAFE_PARKING_FRONT/src/app/components/home-administrador/home-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/home-administrador/home-administrador.component.html
@@ -16,6 +16,7 @@
     </head>
 
     <body>
+      <app-navbar-administrador></app-navbar-administrador>
       <div class="contenido-principal">
         <div class="textoPrincipal">
           <h1>Panel de Administración de Estacionamientos</h1>
