--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/buscar-horario-estacionamiento/buscar-horario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/buscar-horario-estacionamiento/buscar-horario-estacionamiento.component.css
@@ -14,6 +14,9 @@
 
 body{
   background: linear-gradient(to right, #11998e, #38ef7d);
+  padding: 30px;
+  margin-left: 250px;
+
 }
 .generic-group label {
   font-weight: bold;
