--- a/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.css
@@ -13,6 +13,9 @@
 }
 body{
   background: linear-gradient(to right, #11998e, #38ef7d);
+  padding: 30px;
+  margin-left: 250px;
+
 }
 
 .generic-group label {
