--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
@@ -9,6 +9,9 @@ body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
   color: #333;
+  padding: 30px;
+  margin-left: 250px;
+
 }
 
 /* Contenedor principal */
@@ -60,7 +63,7 @@ button:hover {
 
 /* Mapa */
 .map-container {
-  width: 500px;
+  width: 90%;
   height: 400px;
   border-radius: 5px;
   margin: 40px auto; /* Centrar horizontalmente */
