--- a/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.css
@@ -4,6 +4,8 @@ body {
 
   height: 100%;
   padding: 20px;
+  margin-left: 250px;
+
 
 }
 
@@ -22,7 +24,7 @@ body {
   width: 700px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  margin: 10px auto;
+  margin: 100px auto;
 }
 .fecha {
   background-color: #fff;
