--- a/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.css
@@ -1,9 +1,11 @@
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #11998e, #38ef7d); 
+    background: linear-gradient(to right, #11998e, #38ef7d);
     height: 100%;
     padding: 20px;
+    margin-left: 250px;
+
 }
 
 .container {
