--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
@@ -4,6 +4,8 @@ body {
     background: linear-gradient(to right, #11998e, #38ef7d);
     height: 100%;
     padding: 20px;
+    margin-left: 250px;
+
 }
 
 .container {
