--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
@@ -1,8 +1,10 @@
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #11998e, #38ef7d); 
+    background: linear-gradient(to right, #11998e, #38ef7d);
     padding: 20px;
+    margin-left: 250px;
+
 }
 
 .container {
@@ -34,7 +36,7 @@ mat-form-field {
 
 button {
     margin: 10px;
-    
+
 }
 
 .botonRegistro{
